--- a/package.json
+++ b/package.json
@@ -9,15 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.4.5",
+    "@pinecone-database/pinecone": "^0.1.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.21.0",
+    "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
+    "encoding": "^0.1.13",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "eventsource-parser": "^1.0.0",
+    "langchain": "^0.0.95",
+    "lucide-react": "^0.244.0",
     "next": "13.4.5",
+    "openai": "^3.3.0",
+    "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-markdown": "^8.0.7",
+    "react-tooltip": "^5.14.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-gfm": "^3.0.1",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/uuid": "^9.0.2",
+    "ai": "^2.0.0",
+    "dotenv": "^16.1.4"
   }
 }
