--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "react-hot-toast": "^2.4.1"
   }
 }
