--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^0.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "eslint": "8.42.0",
@@ -29,6 +32,7 @@
     "langchain": "^0.0.96",
     "lucide-react": "^0.244.0",
     "next": "13.4.5",
+    "next-auth": "^4.22.1",
     "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
