--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@clerk/nextjs": "^4.21.10",
     "@material-tailwind/react": "^2.0.4",
     "@pinecone-database/pinecone": "^0.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -24,22 +23,17 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "encoding": "^0.1.13",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "eventsource-parser": "^1.0.0",
     "langchain": "^0.0.96",
-    "lucide-react": "^0.244.0",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
-    "openai": "^3.3.0",
-    "openai-edge": "^1.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
-    "react-tooltip": "^5.14.0",
+    "react-hot-toast": "^2.4.1",
     "rehype-highlight": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.13.2",
@@ -51,12 +45,9 @@
     "@nem035/gpt-3-encoder": "^1.1.7",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/uuid": "^9.0.2",
-    "ai": "^2.0.0",
+    "depcheck": "^1.4.3",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.4.7-canary.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-tailwindcss": "^3.12.0",
-    "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "react-hot-toast": "^2.4.1"
   }
