--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.0.4",
     "@pinecone-database/pinecone": "^0.1.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "10.4.14",
@@ -23,12 +24,12 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "langchain": "0.0.96",
+    "lucide-react": "^0.259.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
     "rehype-highlight": "^6.0.0",
     "remark-gfm": "^3.0.1",
@@ -41,12 +42,12 @@
   },
   "devDependencies": {
     "@nem035/gpt-3-encoder": "^1.1.7",
-    "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/snowflake-sdk": "^1.6.13",
-    "@types/uuid": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.2.5",
+    "@types/snowflake-sdk": "^1.6.13",
+    "@types/uuid": "^9.0.2",
     "depcheck": "^1.4.3",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.4.7-canary.1",
