--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.21.0",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
@@ -26,9 +26,7 @@
     "langchain": "0.0.96",
     "lucide-react": "^0.259.0",
     "next": "13.4.8",
-    "postcss": "8.4.24",
     "react": "18.2.0",
-    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "rehype-highlight": "^6.0.0",
@@ -36,16 +34,12 @@
     "snowflake-sdk": "1.6.23",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nem035/gpt-3-encoder": "^1.1.7",
-    "@types/node": "20.3.1",
     "@types/react": "18.2.12",
-    "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "18.2.5",
     "@types/snowflake-sdk": "^1.6.13",
     "@types/uuid": "^9.0.2",
     "depcheck": "^1.4.3",
