Fix build warnings

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,6 @@ PINECONE_NAME_SPACE=
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
@@ -25,8 +22,10 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 MODAL_API_ENDPOINT=
+#generate a random key only for production
+MODAL_AUTH_TOKEN=
 
-NEXT_PUBLIC_VERCEL_URL=snowbrain.vercel.app
+NEXT_PUBLIC_VERCEL_URL=snowbrain.dev
 
 #snowflake account
 
