--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@supabase/supabase-js": "^2.26.0",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
     "@vercel/analytics": "^1.0.1",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
