--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@supabase/supabase-js": "^2.26.0",
     "@upstash/ratelimit": "^0.4.3",
@@ -34,13 +35,13 @@
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "focus-trap-react": "^10.1.1",
+    "lucide-react": "^0.260.0",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
     "next-themes": "^0.2.1",
     "openai-edge": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
