--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,33 @@
-## You must first activate a Billing Account here: https://platform.openai.com/account/billing/overview
-## Then get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=XXXXXXXX
 
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
-# In local dev you can get these by running `supabase status`.
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+OPENAI_API_KEY=
 
-## Follow GitHub Oauth setup steps from Supabase: 
-AUTH_GITHUB_ID=XXXXXXXX
-AUTH_GITHUB_SECRET=XXXXXXXX
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_FRONTEND_API=
+
+PINECONE_API_KEY=
+PINECONE_ENVIRONMENT=
+PINECONE_INDEX_NAME=snowbrain-v1
+PINECONE_NAME_SPACE=snowbrain
+
+ACCOUNT=
+USER_NAME=
+PASSWORD=
+ROLE=
+DATABASE=
+SCHEMA=
+WAREHOUSE=
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=
+
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
