--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -40,9 +40,9 @@ file_size_limit = "50MiB"
 [auth]
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
 # in emails.
-site_url = "https://snowbrain-git-dev-kaarthik108.vercel.app"
+site_url = "https://snowbrain.dev"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["http://localhost:3000/api/auth/callback", "https://*-kaarthik108.vercel.app/**"]
+additional_redirect_urls = [""]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 seconds (one
 # week).
 jwt_expiry = 3600
@@ -51,7 +51,7 @@ enable_signup = true
 
 [auth.email]
 # Allow/disallow new user signups via email to your project.
-enable_signup = true
+enable_signup = false
 # If enabled, a user will be required to confirm any email change on both the old, and new email
 # addresses. If disabled, only the new email is required to confirm.
 double_confirm_changes = true
@@ -62,7 +62,7 @@ enable_confirmations = false
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin`, `notion`, `twitch`,
 # `twitter`, `slack`, `spotify`, `workos`, `zoom`.
 [auth.external.github]
-enabled = true
+enabled = false
 client_id = "env(AUTH_GITHUB_ID)"
 secret = "env(AUTH_GITHUB_SECRET)"
 # Overrides the default auth redirectUrl.
