--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "@vercel/og": "^0.5.7",
-    "ai": "^2.1.6",
+    "ai": "2.1.6",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
@@ -64,7 +64,7 @@
     "eslint-config-next": "13.4.7-canary.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.12.0",
-    "langchain": "^0.0.109",
+    "langchain": "0.0.109",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "supabase": "^1.77.9",
