--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.21.15",
+    "@langchain/openai": "^0.0.13",
+    "@langchain/pinecone": "^0.0.1",
     "@radix-ui/react-alert-dialog": "1.0.4",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -38,7 +40,7 @@
     "nanoid": "^4.0.2",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
-    "openai-edge": "^0.5.1",
+    "openai-edge": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.4",
@@ -51,7 +53,7 @@
     "snowflake-sdk": "^1.6.23"
   },
   "devDependencies": {
-    "@pinecone-database/pinecone": "^0.1.6",
+    "@pinecone-database/pinecone": "^2.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.6",
